# my-new-driver-for-xclipse-940

./: CMakeLists.txt  DEPLOY.md  VALIDATION.md  basis_to_bc7.comp  bc6h.comp  bc_emulate.h  bc_impl.cpp  build.yml  build_and_package.sh  exynos_xclipse_advanced.tar  layer_core.cpp
assets/shaders/: bc7.comp
tests/: run_validation.sh
